--- a/site/_layouts/home.html
+++ b/site/_layouts/home.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>{% include head.html %}</head>
-    <body>{{ content }}</body>
+    <header>{% include header.html %}</header>
+    <body>
+        <main>{{ content }}</main>
+    </body>
     <footer>{% include footer.html %}</footer>
 </html>
